농지 csv 데이터 인코딩 변경

--- a/house_preprocessing.ipynb
+++ b/house_preprocessing.ipynb
@@ -713,26 +713,26 @@
     {
      "data": {
       "text/plain": [
-       "200         협의후 결정\n",
-       "237        1억/협의가능\n",
-       "106           2억7천\n",
-       "196            합의가\n",
-       "353              .\n",
-       "44             합의가\n",
-       "152     70,000,000\n",
-       "372       70000000\n",
-       "53     16,000,000원\n",
-       "27             합의가\n",
-       "316         상담후 결정\n",
-       "98             합의가\n",
-       "386       1억8천5백만원\n",
-       "233    120,000,000\n",
-       "293         상담후 결정\n",
-       "24             합의가\n",
-       "11            1억4천\n",
-       "101            합의가\n",
-       "278              .\n",
+       "51              협의\n",
+       "307              .\n",
+       "58              협의\n",
        "91              협의\n",
+       "333         9,000만\n",
+       "215       85000000\n",
+       "120     1억 4,500만원\n",
+       "321         상담후 결정\n",
+       "10          8500만원\n",
+       "365              .\n",
+       "114      2억4,500만원\n",
+       "279              .\n",
+       "297             3억\n",
+       "93             합의가\n",
+       "272              .\n",
+       "54     70,000,000원\n",
+       "24             합의가\n",
+       "211         협의후 결정\n",
+       "218            합의가\n",
+       "203         협의후 결정\n",
        "Name: 매매/임대가, dtype: object"
       ]
      },
@@ -800,27 +800,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "177ab308",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "318    100000005\n",
-       "225    100000002\n",
-       "168    100000001\n",
-       "25           협의가\n",
-       "288         6000\n",
-       "296          협의가\n",
-       "252         5600\n",
-       "223     48000000\n",
+       "327     19000000\n",
+       "40           협의가\n",
        "235     50000000\n",
-       "271          협의가\n",
+       "387    100000009\n",
+       "67      45000000\n",
+       "16     260000000\n",
+       "363     25000000\n",
+       "73           협의가\n",
+       "213    100000000\n",
+       "377            2\n",
        "Name: 매매/임대가, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "6a6ce00b",
    "metadata": {},
    "outputs": [
@@ -853,7 +853,7 @@
        "Name: count, Length: 113, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,37 +864,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "1771be99",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "18       전라남도 고흥군 동일면 사동육동길 64-10\n",
-       "155             전라남도 나주시 향청길 7-13\n",
-       "76       전라남도 곡성군 곡성읍 동막평지길 46-16\n",
-       "228               강진군 도암면 지석리 563\n",
-       "231                       담양군 금성면\n",
-       "1             전라남도 함평군 함평읍 남일길 59\n",
-       "361      전남 강진군 마량면 원포리 172-26.27\n",
-       "89               전라남도 장성군 서삼면 용흥리\n",
-       "232                   강진군 작천면 화방로\n",
-       "224       전라남도 강진군 신전면 사초앞길 41-10\n",
-       "28          전라남도 고흥군 포두면 정자길 16-3\n",
-       "380    전남 장흥군 장평면 복흥리 491-1 491-1\n",
-       "255          전라남도 강진군 마량면 마량1길 21\n",
-       "125       전라남도 고흥군 과역면 내로당날길 10-3\n",
-       "150              전라남도 나주시 다시면 죽산리\n",
-       "48         전라남도 고흥군 고흥읍 호서1길 17-3\n",
-       "52             전라남도 영암군 학산면 상월상리길\n",
-       "199        전라남도 나주시 금천면 벽류길 78-28\n",
-       "26           전라남도 고흥군 포두면 원상대길 16\n",
-       "86         전라남도 고흥군 금산면 발막금길 52-7\n",
+       "171                        전라남도 나주시 삼도길 33-14\n",
+       "30                      전라남도 고흥군 포두면 봉덕길 50-4\n",
+       "103                           전라남도 고흥군 점암면 봉남\n",
+       "192                      전라남도 강진군 작천면 평리3길 28\n",
+       "268    구례군 구례읍 구례1길 93. 제일빌 원룸임대 보500만원 월35만원\n",
+       "316                            강진군 군동면 신기길 45\n",
+       "85                      전라남도 나주시 노안면 오정석정길 33\n",
+       "186                       전라남도 나주시 다시면 월서길 58\n",
+       "372                       전남 영암군 서호면 몽해리 55-1\n",
+       "352                      전남 장흥군 장평면 청용리 435-1\n",
+       "227                                   함평읍 내교리\n",
+       "191                                   해남읍 학동리\n",
+       "173                        전라남도 나주시 남외1길 37-4\n",
+       "210                 전라남도 장흥군 장동면 만년리 746, 747\n",
+       "90                      전라남도 장성군 북하면 단풍로 1668\n",
+       "153                   전라남도 나주시 다도면 덕림로 472-35\n",
+       "262                          강진군 강진읍 학림길 12-2\n",
+       "245                     전라남도 강진군 강진읍 송덕길 6-57\n",
+       "235                      전라남도 강진군 칠량면 동백리 701\n",
+       "201                      전라남도 나주시 봉황면 철야2길 15\n",
        "Name: 매물주소, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "b624e2e5",
    "metadata": {},
    "outputs": [],
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "a415143b",
    "metadata": {},
    "outputs": [],
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "9e022b3d",
    "metadata": {},
    "outputs": [
@@ -944,7 +944,7 @@
        "'전라남도 강진군 도암면 신평길 38 (신평길 38'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "aab7bae6",
    "metadata": {},
    "outputs": [
@@ -966,7 +966,7 @@
        "       '주택/어장', '주택/시설/축사/농지', '주택/시설/농지/산림', '주택/축사'], dtype=object)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "3ad77a6a",
    "metadata": {},
    "outputs": [
@@ -1220,7 +1220,7 @@
        "9  건물 2동 포함1동= 40평(방3개, 화장실 3개)2동=90평(홀3, 화장실 4개)...  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "b915fff3",
    "metadata": {},
    "outputs": [],
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "b8f6eec5",
    "metadata": {},
    "outputs": [],
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "14877d93",
    "metadata": {},
    "outputs": [
@@ -1496,7 +1496,7 @@
        "9  건물 2동 포함1동= 40평(방3개, 화장실 3개)2동=90평(홀3, 화장실 4개)...  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1507,12 +1507,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "e598edad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"농지_전처리완료.csv\", index=False)"
+    "df.to_csv(\"농지_전처리완료2.csv\", index=False, encoding='utf-8')"
    ]
   },
   {
